tests/snapshots/run_wpt_conformance__trtx_reduceMin_float16_3D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_min.https.any.js",
    "reduceMin float16 3D tensor default options",
    "trtx",
    "PASS",
)
